<resources>

    <string name="gmt">Therabeat</string>
    <string name="url">http://www.guidedmeditationtreks.com/binaural.html</string>
    <string name="app_name">Therabeat</string>
    <string name="carrier_label">Carrier Frequency</string>
    <string name="beat_label">Beat Frequency</string>
    <string name="carrier_hint">Enter Carrier Frequency</string>
    <string name="beat_hint">Enter Beat Frequency</string>
    <string name="binaural_radio">Binaural Beats</string>
    <string name="isochronic_radio">Isochronic Pulses</string>
    <string name="not_applicable">n/a</string>
    <string name="title_activity_spotify_login">SpotifyLoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">There are no songs here</string>
    <string name="settings">Settings</string>
    <string name="spotifyError">Couldn\'t detect Spotify App\nPlease install the Spotify app to proceed further</string>
    <string name="playstoreRedirect">Install from PlayStore</string>
    <string name="OpeningScreenMessage">Select an option to proceed</string>
    <string name="userMoodChoiceMessage">What can we help you with today?</string>
    <string name="anxietyString">Anxiety</string>
    <string name="memoryString">Memory</string>
    <string name="attentionString">Attention</string>
    <string name="networkError">Could not connect to the internet</string>
    <string name="welcomeMsg">Welcome</string>
    <string name="ConnectToSpotifyString">Connect to Spotify</string>
    <string name="UseOfflineString">Use Offline</string>
    <string name="FeedbackButtonString">Give Feedback</string>

    <string name="AboutUsText">
  <![CDATA[
    Therabeat aims to provide a therapeutic music listening experience. It is geared towards helping patients get better while listening to the music that they enjoy.
    <br/><br/>This project is headed by:<br/>Dr. Yune S. Lee<br/>Department of Speech, Language, and Hearing<br/>School of Behavioral and Brain Sciences<br/>The University of Texas at Dallas
    <br/><br/>Dr. Dawn Owens<br/>Program Director, Business Analytics and Information Technology and Systems Programs<br/>Naveen Jindal School of Management<br/>The University of Texas at Dallas
<br/><br/> Developer Contact:<br/>Anurag Wasankar<br/>Graduate Student<br/>Erik Jonsson School of Computer Science<br/>The University of Texas at Dallas
<br/><br/>Special thanks to Jesper S Bajwa.]]>
</string>
    <string name="music_player_controls_heading">Music Player Controls</string>
    <string name="music_player_description">Swipe down from the top to minimize the music player and continue using the app for viewing analytics, etc\nTap the player again to maximize it</string>
    <string name="refresh_content_heading">Refresh Content</string>
    <string name="refresh_layout_description">Refresh the layout by swiping down from the top of Home Page and Analytics Page to view the latest data</string>
    <string name="logout_string">Click to diconnect your Spotify Account from Therabeat</string>
    <string name="moreoptions">Options</string>
    <string name="AboutUsItem">About Us</string>
    <string name="SendFeedbackItem">Send Feedback</string>
    <string name="analytics">Analytics</string>
    <string name="MusicButtonString">Music</string>
    <string name="AboutUsButtonString">About Us</string>

    <string name="SpinnerOption">Spinner</string>
    <string name="FloatingActionButton">FloatingActionButton</string>

    //Firebase
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="fcm_message">Incoming Notification</string>
    <string name="SettingsItem">Settings</string>
    <string name="add_to_quuee_string">Add to Quuee</string>
    <string name="add_to_playlist_string">Add to Playlist</string>
    <string name="choose_playlist_string">Choose playlist</string>
    <string name="AppModeSelectionMessage">How would you like your music?</string>

</resources>
