<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/analytics"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/analytics"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/feedbackitem"
        android:title="@string/SendFeedbackItem"
        app:showAsAction="never" />
    <item
        android:id="@+id/settingsitem"
        android:title="@string/SettingsItem"
        app:showAsAction="never" />
</menu>